# hands-on-cv

./: .gitignore  README.md  settings.gradle
Demo/: build.gradle
Demo/src/androidTest/java/intern/expivi/detectionsdk/: ExampleInstrumentedTest.java
Demo/src/main/: AndroidManifest.xml
Demo/src/main/java/intern/expivi/detectionsdk/: Arrow.java  Cube.java  IModel.java  (+7 more)
Demo/src/main/res/layout/: activity_demo.xml  fragment_demo.xml
Demo/src/main/res/menu/: menu_demo.xml
Demo/src/main/res/values/: strings.xml
DetectionLibrary/: CMakeLists.txt  build.gradle
DetectionLibrary/src/androidTest/java/intern/expivi/detectionlib/: ExampleInstrumentedTest.java
DetectionLibrary/src/main/: AndroidManifest.xml
DetectionLibrary/src/main/cpp/: application.cpp  application.h  calibration_object.cpp  calibration_object.h  detector.cpp  detector.h  roi.cpp  roi.h  types.h  wrapper.cpp
DetectionLibrary/src/main/cpp/hand/: finger.cpp  finger.h  hand.cpp  hand.h
DetectionLibrary/src/main/cpp/utils/: Vertex.h  functions.cpp  functions.h
DetectionLibrary/src/main/java/intern/expivi/detectionlib/: CameraView.java  CommunicationInterface.java  FPSMeter.java  InitializationFragment.java  NativeWrapper.java  Point.java  Rect.java  Vector.java
DetectionLibrary/src/main/res/layout/: fragment_initialization.xml
DetectionLibrary/src/main/res/menu/: menu_initialize.xml
DetectionLibrary/src/main/res/values/: strings.xml
DetectionLibrary/src/test/java/intern/expivi/detectionlib/: ExampleUnitTest.java
OpenCVLibrary/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
